--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -9,6 +9,7 @@
 <LinearLayout
     	android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal">
         
     <LinearLayout
@@ -50,7 +51,7 @@
             android:layout_height="wrap_content"            
             android:textSize="14sp"
             android:gravity="center"
-            android:layout_gravity="center_vertical"
+            android:layout_gravity="center"
             android:id = "@+id/alarm_title3"/>
 
         </LinearLayout>
@@ -75,6 +76,7 @@
 
 <LinearLayout android:layout_width="fill_parent"
         android:layout_height="wrap_content"
+        android:layout_weight="1"
         android:orientation="horizontal" >
     
     <Button
