--- a/workspace/GTAcampuS/res/layout/course.xml
+++ b/workspace/GTAcampuS/res/layout/course.xml
@@ -1,51 +1,156 @@
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    tools:context="com.example.gtacampus.Slot"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" 
-    android:background="#000"
-    tools:context=".courses">
+    android:layout_height="fill_parent"
+    android:orientation="vertical">
 
     <TextView
         android:id="@+id/textView1"
-        android:layout_width="wrap_content"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_alignParentTop="true"
-        android:layout_marginTop="42dp"
-        android:gravity="center_horizontal"
-        android:text="ADD ALL THE REGISTERED COURSES"
-        android:textColor="#FFF"
+        android:gravity="center"
+        android:text="ADD ALL THE REGISTERED COURSES HERE"
+        android:textColor="#0F0"
         android:textSize="22sp"
         android:textStyle="bold" />
 
+    <View android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:drawable/divider_horizontal_bright"/>
+    
+    
+    <LinearLayout android:layout_width="fill_parent"
+        android:baselineAligned="false"
+    android:layout_height="wrap_content" 
+    android:orientation="horizontal">
+    
+    <LinearLayout android:layout_width="wrap_content"
+    android:layout_height="fill_parent" 
+    android:layout_weight="1"
+    android:orientation="vertical">
+    
+        <TextView 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:textColor="#FFF"
+    android:layout_weight="1"
+    android:textSize="20sp"
+    android:text="Course Name : "/>
+    
+        <TextView 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:textSize="20sp"
+    android:textColor="#FFF"
+    android:text="Course Code : "/>
+        
+        <TextView 
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:textSize="20sp"
+    android:textColor="#FFF"
+    android:text="Teacher : "/>
+
+       </LinearLayout>
+    
+    <LinearLayout android:layout_width="wrap_content"
+    android:layout_height="match_parent" 
+    android:layout_weight="1"
+    android:orientation="vertical">
+    
+        
+        
+   <EditText
+        android:id="@+id/course_name"
+        android:minWidth="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="#FFF" />
+   
+   <EditText
+        android:id="@+id/course_code"
+        android:minWidth="100dp"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_weight="1"
+        android:textColor="#FFF" />
     
 
     <EditText
-        android:id="@+id/et"
-        android:layout_width="400dp"
-        android:layout_height="wrap_content"
-        android:layout_alignParentLeft="true"
-        android:layout_below="@+id/textView1"
-        android:layout_marginTop="52dp"
-        android:layout_toLeftOf="@+id/slots"
-        android:textColor="#FFF" />
-
-
-    <Button
-        android:id="@+id/button1"
+        android:id="@+id/course_teacher"
+        android:minWidth="100dp"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="85dp"
+        android:layout_weight="1"
+        android:textColor="#FFF" />
+
+    </LinearLayout></LinearLayout>
+    
+    <View android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:drawable/divider_horizontal_bright"/>
+    
+ <LinearLayout android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:id="@+id/ll_course_timing"
+     android:orientation="vertical">
+    
+    <TextView 
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:layout_weight="1"
+    android:textSize="20sp"
+    android:textColor="#FFF"
+    android:gravity="center"
+    android:textStyle="bold"
+    android:text="ADD COURSE TIMINGS"/>
+    
+    <View android:layout_width="fill_parent"
+        android:layout_height="1dp"
+        android:background="@android:drawable/divider_horizontal_bright"/>
+
+    </LinearLayout>  
+    
+<ScrollView android:layout_width="match_parent"
+     android:layout_height="wrap_content"
+     android:layout_weight="1"
+     android:scrollbars="vertical">
+    
+<LinearLayout android:layout_width="wrap_content"
+     android:layout_height="wrap_content"
+     android:id="@+id/ll_get_course_timing"
+     android:orientation="horizontal">
+    
+    <Spinner android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:entries="@array/week"
+        android:id="@+id/course_day"/>
+    
+        <Spinner android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:id="@+id/course_time" />
+        
+        <Button
+        android:id="@+id/timebutton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:onClick="addtime"
+        android:text="ADD TIME" />
+    
+    </LinearLayout></ScrollView>
+    
+    <Button
+        android:id="@+id/button1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
         android:onClick="addata"
-        android:text="ADD" />
+        android:text="ADD COURSE" />
 
-    <Spinner
-        android:id="@+id/slots"
-        android:layout_width="150dp"
-        android:layout_height="60dp"
-        android:layout_alignBottom="@+id/et"
-        android:layout_alignParentRight="true" />
-
-</RelativeLayout>
+</LinearLayout>
