--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -15,22 +15,35 @@
     <LinearLayout
     	android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:minWidth="60dp"
+        android:minWidth="90dp"
         android:orientation="vertical">
 
-        <AnalogClock
-        android:id="@+id/analogClock1"
+        <DigitalClock
+        android:id="@+id/digitalClock1"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:padding="60dp"
+        android:textAllCaps="true"
+        android:paddingLeft="20dp"
+        android:paddingRight="20dp"
+        android:paddingTop="50dp"
+        android:paddingBottom="50dp"
+        android:textStyle="bold"
+        android:textColor="#f4ba1d"
         android:layout_gravity="center|center_vertical" />
         
+        <View android:layout_width="fill_parent"
+    android:layout_height="1dp"
+    android:padding="5dp"
+    android:background="@android:drawable/divider_horizontal_dark">
+			</View>
+        
         <TextView 
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
             android:text="NEXT ALERT"
+        android:background="@android:drawable/dark_header"
             android:textColor="#0f0"
             android:visibility="invisible"
             android:layout_gravity="center"
@@ -54,17 +67,22 @@
             android:layout_gravity="center"
             android:id = "@+id/alarm_title3"/>
 
+		        <View android:layout_width="fill_parent"
+    android:layout_height="1dp"
+    android:layout_marginTop="8dp"
+    android:padding="5dp"
+    android:background="@android:drawable/divider_horizontal_dark">
+			</View>	
+        
         </LinearLayout>
 
     <ListView
         android:layout_marginLeft="30dp"
         android:id="@android:id/list"
-        android:layout_width="fill_parent"
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@drawable/book"
         android:drawSelectorOnTop="false"
-        android:focusable="false"
-        android:focusableInTouchMode="false"
         android:divider="#333"
         android:dividerHeight="2dp"
         android:listSelector="@drawable/list_style"
