--- a/workspace/GTAcampuS/res/layout/alarmslayout.xml
+++ b/workspace/GTAcampuS/res/layout/alarmslayout.xml
@@ -14,6 +14,7 @@
     
     <ListView android:id="@+id/android:list"
           android:layout_height="wrap_content"
+          android:longClickable="true"
           android:layout_width="fill_parent"/>
     
  <LinearLayout android:layout_width="fill_parent"
