--- a/workspace/GTAcampuS/res/layout/course.xml
+++ b/workspace/GTAcampuS/res/layout/course.xml
@@ -69,7 +69,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="#FFF" />
+        android:textColor="#F00" />
    
    <EditText
         android:id="@+id/course_code"
@@ -77,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="#FFF" />
+        android:textColor="#F00" />
     
 
     <EditText
@@ -86,7 +86,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_weight="1"
-        android:textColor="#FFF" />
+        android:textColor="#F00" />
 
     </LinearLayout></LinearLayout>
     
@@ -151,6 +151,7 @@
         android:layout_height="wrap_content"
         android:gravity="center"
         android:onClick="addata"
-        android:text="ADD COURSE" />
+        android:drawableLeft="@android:drawable/ic_menu_save"
+        android:text="SAVE COURSE" />
 
 </LinearLayout>
