--- a/workspace/GTAcampuS/res/layout/check.xml
+++ b/workspace/GTAcampuS/res/layout/check.xml
@@ -10,6 +10,7 @@ android:id="@+id/selection2"
 android:layout_width="fill_parent"
 android:layout_height="50dp"
 android:text=""
+android:gravity="center"
 android:textSize="20sp"
 android:textStyle="bold"
 android:textColor="#0f0"
