--- a/workspace/GTAcampuS/res/layout/alarm.xml
+++ b/workspace/GTAcampuS/res/layout/alarm.xml
@@ -72,9 +72,9 @@
         android:layout_height="80dp"
         android:layout_weight="1"
         android:layout_margin="10dp"
+        android:text=""
         android:background="@drawable/rect"
         android:layout_marginLeft="10dp"
-        android:text="BUNK"
         android:textColor="#FFFFFF"
         android:textSize="25sp"
         android:textStyle="bold"
