--- a/workspace/GTAcampuS/res/layout/bunklist.xml
+++ b/workspace/GTAcampuS/res/layout/bunklist.xml
@@ -9,13 +9,13 @@
 
 <TextView
     android:id="@+id/textView1"
-    android:layout_width="wrap_content"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_alignParentLeft="true"
-    android:layout_alignParentTop="true"
-    android:layout_marginLeft="20dp"
+    android:gravity="center"
+    android:textSize="20sp"
+    android:textColor="#0F0"
     android:textStyle="bold"
-    android:text="COURSE	 -		BUNKS" />
+    android:text="BUNK-O-METER" />
 
 <ListView
     android:id="@android:id/list"
