--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -80,7 +80,7 @@
         
    <View android:layout_width="1dp"
     android:layout_height="match_parent"
-    android:background="@android:drawable/divider_horizontal_dark">
+    android:background="@drawable/lines">
 			</View>	
 
     <ListView
