--- a/workspace/GTAcampuS/res/layout/init_app.xml
+++ b/workspace/GTAcampuS/res/layout/init_app.xml
@@ -5,6 +5,7 @@
     android:layout_width="fill_parent"
     android:layout_height="fill_parent"
     android:orientation="vertical"
+    android:gravity="center"
     android:padding="10dp"
     android:background="#000000" >
 
