--- a/workspace/GTAcampuS/res/layout/notes.xml
+++ b/workspace/GTAcampuS/res/layout/notes.xml
@@ -21,6 +21,7 @@
         android:layout_centerHorizontal="true"
         android:layout_marginBottom="22dp"
         android:onClick="add"
+        android:drawableLeft="@android:drawable/ic_input_add"
         android:text="ADD NOTE" />
 
 </RelativeLayout>
