--- a/workspace/GTAcampuS/res/layout/convertor.xml
+++ b/workspace/GTAcampuS/res/layout/convertor.xml
@@ -39,6 +39,7 @@
         android:layout_height="wrap_content"
         android:id="@+id/conv_value"
         android:textColor="#F00"
+        android:layout_weight="1"
         android:inputType="numberDecimal"
         android:textSize="35sp"
         android:paddingRight="30dp"
@@ -54,7 +55,7 @@
     <View
         android:layout_width="40dp"
         android:layout_height="40dp"
-        android:padding="80dp"
+        android:padding="90dp"
         android:background="@android:drawable/ic_media_play" >
 
 			</View>
@@ -63,9 +64,11 @@
         android:layout_height="wrap_content"
         android:textColor="#f00"
         android:hint="0"
+        android:layout_weight="1"
         android:textSize="35sp"        
         android:maxLines="3"
         android:maxWidth="400dp"
+        android:minWidth="100dp"
          android:paddingRight="30dp"
         android:id="@+id/convr_value"/>	
         
