alert skip notification

--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -42,7 +42,7 @@
             android:layout_height="wrap_content"
             android:textSize="20sp"
             android:textStyle="bold"
-            android:text="NEXT ALERT"
+            android:text="@string/nextalert"
         android:background="@android:drawable/dark_header"
             android:textColor="#0f0"
             android:visibility="invisible"
