--- a/workspace/GTAcampuS/res/layout/activity_gtacal_c.xml
+++ b/workspace/GTAcampuS/res/layout/activity_gtacal_c.xml
@@ -12,7 +12,7 @@
         android:background="#ddd"
         android:textIsSelectable="true"
         android:gravity="right"
-        android:text=""
+        android:text="@string/emptystring"
         android:textAppearance="?android:attr/textAppearanceLarge" />
         
         <View android:layout_width="fill_parent"
@@ -44,7 +44,7 @@
 		android:layout_margin="15dp"
 		android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="1" />
+        android:text="@string/one"/>
 
    		<Button
         android:id="@+id/num2"
@@ -54,7 +54,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="2" />
+        android:text="@string/two"/>
 
     
    	    <Button
@@ -65,7 +65,7 @@
 		android:layout_margin="15dp"
 		android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="3" />
+        android:text="@string/three"/>
 	</LinearLayout>
 
    
@@ -82,7 +82,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="4" />
+        android:text="@string/four"/>
         
     <Button
         android:id="@+id/num5"
@@ -92,7 +92,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="5" />
+        android:text="@string/five"/>
     
          <Button
         android:id="@+id/num6"
@@ -102,7 +102,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="6" />
+        android:text="@string/six" />
     </LinearLayout>	
     
    <LinearLayout android:layout_width="fill_parent"
@@ -118,7 +118,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="7" />
+        android:text="@string/seven" />
         
             <Button
         android:id="@+id/num8"
@@ -128,7 +128,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="8" />
+        android:text="@string/eight" />
             
     <Button
         android:id="@+id/num9"
@@ -138,7 +138,7 @@
         android:layout_margin="15dp"
         android:layout_weight="1"
         android:background="@drawable/button"
-        android:text="9" />
+        android:text="@string/nine" />
     
     </LinearLayout>
     
@@ -168,7 +168,7 @@
         android:layout_weight="0.01"
         android:background="@drawable/button"
         android:padding="5dp"
-        android:text="0" />
+        android:text="@string/zero" />
 
     <Button
         android:id="@+id/equal"
