--- a/workspace/GTAcampuS/res/layout/activity_campus.xml
+++ b/workspace/GTAcampuS/res/layout/activity_campus.xml
@@ -48,6 +48,7 @@
         <TextView 
             android:layout_width="wrap_content"
             android:layout_height="25dp"
+            android:layout_marginTop="3dp"
             android:textSize="15sp"
             android:layout_gravity="center"
             android:gravity="center"
@@ -56,9 +57,11 @@
         
         <TextView 
             android:layout_width="wrap_content"
-            android:layout_height="25dp"            
+            android:layout_height="20dp"            
             android:textSize="14sp"
             android:gravity="center"
+            android:paddingLeft="5dp"
+            android:paddingRight="5dp"
             android:layout_gravity="center"
             android:id = "@+id/alarm_title3"/>
 
@@ -78,7 +81,7 @@
 		            android:drawableLeft="@android:drawable/ic_secure"
 		            android:drawingCacheQuality="high"
 		            android:drawablePadding="5dp"
-		            android:textColor="#FFFFFF"
+		            android:textColor="#AAA"
 		            style="@android:style/MediaButton.Play"
 		            android:text="@string/action_settings"
 		            android:onClick="getsettings"/>
