--- a/workspace/GTAcampuS/res/layout/activity_gtacal_c.xml
+++ b/workspace/GTAcampuS/res/layout/activity_gtacal_c.xml
@@ -2,12 +2,14 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:padding="5dp"
     android:orientation="vertical">
     
         <TextView
         android:id="@+id/text"
         android:layout_width="match_parent"
         android:layout_height="60dp"
+        android:padding="5dp"
         android:textStyle="bold"
         android:background="#ddd"
         android:textIsSelectable="true"
