--- a/workspace/GTAcampuS/res/layout/alarmslayout.xml
+++ b/workspace/GTAcampuS/res/layout/alarmslayout.xml
@@ -19,9 +19,8 @@
     
  <LinearLayout android:layout_width="fill_parent"
      android:layout_height="50dp"
-     android:padding="2dp"
      android:gravity="center"
-     android:background="#77888888"
+     android:background="#44118811"
      android:layout_alignParentBottom="true"
      android:orientation="horizontal">
      
@@ -29,27 +28,25 @@
         android:id="@+id/add_new"
         android:layout_width="wrap_content"
         android:layout_height="fill_parent" 
-        android:layout_marginLeft="10dp" 
-        android:layout_marginRight="5dp" 
-        android:background="@drawable/rect" 
+        android:background="@drawable/styledbuttons" 
         android:textStyle="bold"
         android:layout_weight="1"
+        android:layout_marginLeft="4dp"
+        android:layout_marginRight="2dp"
         android:textColor="#FFFFFF"
-        android:padding="2dp" 
         android:text="@string/addtask"></Button>
     
     <Button 
         android:id="@+id/add_alarm"
         android:gravity="center"
         android:layout_width="wrap_content"
-        android:layout_height="fill_parent" 
-        android:layout_marginLeft="5dp" 
-        android:layout_marginRight="10dp"
+        android:layout_height="fill_parent"
         android:layout_weight="1" 
-        android:background="@drawable/rect" 
+        android:background="@drawable/styledbuttons" 
+        android:layout_marginLeft="2dp"
+        android:layout_marginRight="4dp"
         android:textColor="#FFFFFF"
         android:textStyle="bold"
-        android:padding="2dp" 
         android:text="@string/addalarm"></Button>
     
     
