--- a/workspace/GTAcampuS/res/layout/course.xml
+++ b/workspace/GTAcampuS/res/layout/course.xml
@@ -7,7 +7,7 @@
     <TextView
         android:id="@+id/textView1"
         android:layout_width="match_parent"
-        android:layout_height="60dp"
+        android:layout_height="55dp"
         android:gravity="center"
         android:text="@string/course_info1"
         android:textColor="#0F0"
@@ -39,6 +39,7 @@
         android:minWidth="100dp"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:textStyle="bold"
         android:inputType="text"
         android:textColor="#F00" /></LinearLayout>
     
@@ -61,9 +62,9 @@
         android:id="@+id/course_code"
         android:minWidth="100dp"
         android:layout_width="match_parent"
+        android:textStyle="bold"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:layout_weight="1"
         android:textColor="#F00" /></LinearLayout>
     
         <LinearLayout android:layout_width="fill_parent"
@@ -87,7 +88,7 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:inputType="text"
-        android:layout_weight="1"
+        android:textStyle="bold"
         android:textColor="#F00" />
 
        </LinearLayout>
@@ -152,9 +153,11 @@
     <Button
         android:id="@+id/button1"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="40dp"
+        android:layout_margin="5dp"
         android:gravity="center"
         android:onClick="addata"
+        android:background="@drawable/styledbuttons"
         android:drawableLeft="@android:drawable/ic_menu_save"
         android:text="@string/save" />
 
