--- a/workspace/GTAcampuS/res/layout/notes.xml
+++ b/workspace/GTAcampuS/res/layout/notes.xml
@@ -1,14 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="fill_parent"
     android:layout_height="fill_parent" 
+    android:orientation="vertical"
     tools:context="com.example.gtacampus.notedata">
 
     <ListView
         android:id="@android:id/list"
         android:layout_width="fill_parent"
-        android:layout_height="347dp"
+        android:layout_height="0dip"
+        android:layout_weight="2"
         android:drawSelectorOnTop="false"
         android:textSize="14sp" >
     </ListView>
@@ -16,12 +18,11 @@
     <Button
         android:id="@+id/button1"
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_centerHorizontal="true"
-        android:layout_marginBottom="22dp"
+        android:layout_height="50dp"
+        android:layout_gravity="center_horizontal"
         android:onClick="add"
         android:drawableLeft="@android:drawable/ic_input_add"
+        android:layout_weight=".1"
         android:text="@string/addnote" />
 
-</RelativeLayout>
+</LinearLayout>
